Add Lab 2 - Task 1

--- a/Laboratory work No. 2/Task No. 1/tasks.json
+++ b/Laboratory work No. 2/Task No. 1/tasks.json
@@ -5,18 +5,23 @@
     "category": "#учёба"
   },
   {
-    "description": "Сходить в зал",
-    "status": true,
-    "category": "#спорт"
-  },
-  {
     "description": "Посмотреть фильм",
     "status": false,
     "category": "#отдых"
   },
   {
-    "description": "тренировка",
+    "description": "Посмотреть сериал",
+    "status": false,
+    "category": "#отдых"
+  },
+  {
+    "description": "Баскетбол",
     "status": false,
     "category": "#спорт"
+  },
+  {
+    "description": "Купить билеты на самолет",
+    "status": false,
+    "category": "#отдых"
   }
 ]
